--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,31 @@
 body {
   margin: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
 }
 
 h1,h2,h3 {
   text-align: center;
+}
+.card {
+  margin: 15px;
+  padding: 25px;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 500px;
+  max-width: 49%;
+  transition: background-color 1s;
+}
+
+.card:hover {
+  background-color: lightblue;
+}
+
+.form-control {
+  margin-top: 15px;
+  margin-bottom:15px ;
 }
