--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
   margin: 30px;
-  display: flex;
+  background-image: linear-gradient(rgb(69, 69, 255), rgb(148, 225, 255));
+  background-attachment: fixed;
+  height: 100%;
+  /* display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-
+  justify-content: space-evenly; */
 }
 
 h1,h2,h3 {
@@ -21,7 +23,7 @@ h1,h2,h3 {
 }
 
 .card:hover {
-  background-color: lightblue;
+  background-color: rgb(216, 233, 238);
 }
 
 .btn {
