--- a/src/App.css
+++ b/src/App.css
@@ -7,30 +7,39 @@ body {
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 h1,h2,h3 {
   text-align: center;
 }
 .card {
-  margin-top: 30px;
+  margin: 30px;
   padding: 25px;
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
-  max-width: 49%;
-  transition: background-color 1s;
-}
-
-.card:hover {
-  background-color: rgb(216, 233, 238);
+  min-height: 200px;
+  /* box-shadow: 15px 10px 8px #0000001c; */
+  border: none;
+  border-radius: 0%;
 }
 
 .btn {
   margin-top: 15px;
+  width: 100%;
 }
 
 .form-control {
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+.main-list {
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 300px;
+  height: 300px;
 }
