--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,17 @@ body {
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 50px;
-  margin-left: 30px;
-  margin-right: 30px;
 }
 
 h1,h2,h3 {
   text-align: center;
 }
 .card {
-  margin: 30px;
   padding: 25px;
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
   min-height: 200px;
-  /* box-shadow: 15px 10px 8px #0000001c; */
   border: none;
   border-radius: 0%;
 }
@@ -42,4 +38,20 @@ h1,h2,h3 {
   justify-content: space-between;
   width: 300px;
   height: 300px;
+  margin-left: 80px;
+  margin-top: 80px;
+}
+
+.job-compare-card {
+  margin: 80px;
+  box-shadow: 15px 10px 8px #0000001c;
+}
+
+.list-card {
+  box-shadow: 15px 10px 8px #0000001c;
+}
+
+.score-card {
+  text-align: center;
+  font-size: 40px;
 }
