--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ h1,h2,h3,h4 {
   color: red;
 }
 #grade-d {
-  color: orange;
+  color: rgb(230, 149, 0);
 }
 #grade-c {
   color: rgb(177, 177, 0);
