--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@ body {
   background-image: linear-gradient(rgb(69, 69, 255), rgb(148, 225, 255));
   background-attachment: fixed;
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   justify-content: space-evenly;
   margin-bottom: 50px;
 }
@@ -32,9 +32,8 @@ h1,h2,h3,h4 {
 }
 
 .main-list {
+  display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-between;
   width: 300px;
   height: 300px;
   margin-left: 80px;
@@ -52,6 +51,7 @@ h1,h2,h3,h4 {
 
 .list-card {
   box-shadow: 15px 10px 8px #0000001c;
+
 }
 
 .score-card {
