--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@ h1,h2,h3,h4 {
 }
 .card {
   padding: 25px;
-  flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
   min-height: 200px;
@@ -35,7 +34,7 @@ h1,h2,h3,h4 {
   display: flex;
   flex-wrap: wrap;
   width: 300px;
-  height: 300px;
+  height: 275px;
   margin-left: 80px;
   margin-top: 80px;
 }
@@ -51,7 +50,21 @@ h1,h2,h3,h4 {
 
 .list-card {
   box-shadow: 15px 10px 8px #0000001c;
+  /* border-radius: 100%; */
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 30px;
+  transition: width 1s, height 1s, background-color 1s, color 1s, transform 2s;
+  width: 300px;
+  height: 300px;
+}
 
+.list-card:hover {
+  background-color: rgb(255, 166, 0);
+  width: 325px;
+  height: 325px;
+  color: white;
 }
 
 .score-card {
