--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,13 @@ body {
   background-image: linear-gradient(rgb(69, 69, 255), rgb(148, 225, 255));
   background-attachment: fixed;
   height: 100%;
-  /* display: flex; */
-  /* flex-direction: column; */
-  justify-content: space-evenly;
   margin-bottom: 50px;
 }
 
 h1,h2,h3,h4 {
   text-align: center;
 }
+
 .card {
   padding: 25px;
   margin-left: auto;
@@ -35,8 +33,9 @@ h1,h2,h3,h4 {
   flex-wrap: wrap;
   width: 300px;
   height: 275px;
-  margin-left: 80px;
   margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .job-compare-card {
@@ -50,7 +49,6 @@ h1,h2,h3,h4 {
 
 .list-card {
   box-shadow: 15px 10px 8px #0000001c;
-  /* border-radius: 100%; */
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -103,7 +101,6 @@ h1,h2,h3,h4 {
   margin-top: 20px;
   margin-bottom: 20px;
   box-shadow: 15px 10px 8px #0000001c;
-
 }
 
 .score-button {
