--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ h1,h2,h3,h4 {
   text-align: center;
   justify-content: center;
   font-size: 30px;
-  transition: width 1s, height 1s, background-color 1s, color 1s, transform 2s;
+  transition: width 0.5s, height 2s, background-color 1s, color 1s, transform 2s;
   width: 300px;
   height: 300px;
 }
@@ -61,8 +61,9 @@ h1,h2,h3,h4 {
 .list-card:hover {
   background-color: rgb(252,190,65);
   width: 325px;
-  height: 325px;
+  height: 400px;
   color: white;
+  border: greenyellow;
 }
 
 .score-card {
