--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,10 @@ h1,h2,h3,h4 {
   flex-wrap: wrap;
   width: 300px;
   height: 275px;
-  margin-top: 80px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 45px;
+  margin-left: 40px;
+  margin-right: 20px;
+  margin-bottom: 90px;
 }
 
 .job-compare-card {
@@ -53,7 +54,7 @@ h1,h2,h3,h4 {
   text-align: center;
   justify-content: center;
   font-size: 30px;
-  transition: width 0.5s, height 2s, background-color 1s, color 1s, transform 2s;
+  transition: width 0.25s, height 1.5s, background-color 1s, color 1s, transform 2s;
   width: 300px;
   height: 300px;
 }
