--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ h1,h2,h3,h4 {
   text-align: center;
   justify-content: center;
   font-size: 30px;
-  transition: width 0.25s, height 1.5s, background-color 1s, color 1s, transform 2s;
+  transition: width 0.25s, height 0.50s, background-color 0.50s, color 0.50s, transform 2s;
   width: 300px;
   height: 300px;
 }
@@ -62,9 +62,9 @@ h1,h2,h3,h4 {
 .list-card:hover {
   background-color: rgb(252,190,65);
   width: 325px;
-  height: 400px;
+  height: 350px;
   color: white;
-  border: greenyellow;
+  cursor: pointer;
 }
 
 .score-card {
@@ -128,7 +128,8 @@ h1,h2,h3,h4 {
 
 #new-job:hover {
   color: white;
-  background-color: rgba(2, 172, 2, 0.644);
+  background-color: rgba(2, 172, 2, 0.877);
+  cursor: pointer;
 }
 
 #new-job-img {
