--- a/src/App.css
+++ b/src/App.css
@@ -161,3 +161,14 @@ h1,h2,h3,h4 {
   background-color: rgb(252, 65, 65);
   border-color: rgb(252, 65, 65);
 }
+
+#pointer {
+  display: flex;
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#welcome-message {
+  color: white;
+}
