--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ h1,h2,h3,h4, h5 {
   background-color: rgba(187, 187, 187, 0.26);
   border-radius: 25px;
   padding: 50px;
-  width: 1000px;
+  width: 80%;
   margin-top: 20px;
   margin-bottom: 20px;
   box-shadow: 15px 10px 8px #0000001c;
@@ -202,6 +202,7 @@ h1,h2,h3,h4, h5 {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  text-shadow: 15px 10px 8px #00000059;
 }
 
 #quote {
@@ -210,4 +211,5 @@ h1,h2,h3,h4, h5 {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  text-shadow: 15px 10px 8px #00000059;
 }
