--- a/src/App.css
+++ b/src/App.css
@@ -213,3 +213,7 @@ h1,h2,h3,h4, h5 {
   color: white;
   text-shadow: 15px 10px 8px #00000059;
 }
+
+#home-button, #signout-button {
+  width: 10%;
+}
