--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,15 @@ body {
   font-family: 'Nunito', sans-serif;;
 }
 
-h1,h2,h3,h4, h5 {
+h2,h3,h4, h5 {
   text-align: center;
   font-weight: 600;
+}
+
+h1 {
+  font-family: 'Lobster', cursive;
+  text-align: center;
+  font-size: 80px;
 }
 
 .card {
@@ -33,7 +39,7 @@ h1,h2,h3,h4, h5 {
 .main-list {
   display: flex;
   flex-wrap: wrap;
-  width: 300px;
+  width: 275px;
   height: 275px;
   margin-top: 45px;
   margin-left: 40px;
@@ -191,9 +197,8 @@ h1,h2,h3,h4, h5 {
 
 #banner {
   width: 100%;
-  height: 300px;
+  height: 350px;
   object-fit: cover;
-  border-radius: 25px;
 }
 
 #welcome {
