--- a/src/App.css
+++ b/src/App.css
@@ -148,13 +148,14 @@ h1 {
   align-items: center;
   text-align: center;
   justify-content: center;
-  margin-top: 20px;
-  transition: width 1s, height 1s, background-color 1s, color 1s, transform 2s;
+  margin-top: 100px;
+  background-color: rgba(2, 172, 2, 0.459);
+  transition: width 1s, height 1s, background-color 0.50s, color 1s, transform 2s;
 }
 
 #new-job:hover {
   color: white;
-  background-color: rgba(2, 172, 2, 0.877);
+  background-color: rgba(2, 172, 2);
   cursor: pointer;
 }
 
@@ -199,6 +200,7 @@ h1 {
   width: 100%;
   height: 350px;
   object-fit: cover;
+  box-shadow: 15px 10px 8px #0000001c;
 }
 
 #welcome {
